Patch for NDMP fragmentation fix
This issue was migrated from bug 3395 in our old bug tracker.
Original bug information:
Reporter: Chris Costa
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 1.1.x (Experimental)
Attachments:
ndmp_fragmentation.patch: NDMP Fragmentation Patch
ndmp_fragmentation_example.cap: Example capture
ndmp_fragmentation_v2.patch: NDMP Fragmentation Patch (update)
ndmp_fragmentation_example_2.pcap: Example capture 2