From Chris Costa: NDMP fragmentation fix. https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=3395

svn path=/trunk/; revision=28935